# rustweb

./: .env  .env.sample  Cargo.toml  Makefile  README.md
admin/: package.json
admin/src/: App.js  Dashboard.js  MyUrlField.js  posts.js  users.js
app/: package.json
app/src/: App.tsx  auth-provider.ts  authenticated-app.tsx  index.tsx
app/src/components/: lib.tsx
app/src/context/: auth-context.tsx  index.tsx
app/src/screens/file-list/: index.tsx  list.tsx  search-panel.tsx
app/src/screens/payload-list/: index.tsx  list.tsx  uploader.tsx
app/src/screens/project-list/: index.tsx  list.tsx  search-panel.tsx
app/src/unauthenticated-app/: index.tsx  login.tsx  register.tsx
app/src/utils/: http.ts  http.tsx  index.ts  index.tsx
data/: create_user.json
docker/: .env  docker-compose.yaml  mycustom.cnf
dockers/: docker-compose.yaml
examples/: hash_password.rs
ready/: .env  package.json
ready/public/: index.html
ready/src/: App.js  authProvider.js  dataProvider.js  files.js  login.jsx  loginPage.js  myedit.js  neoLogin.jsx  slide.js  store.js  user.js
src/: error.rs  lib.rs  main.rs
src/db/: mod.rs  users.rs
src/http/: error.rs  extractor.rs  mod.rs  users.rs
web/: .env  Cargo.toml  Makefile  Makefiles
web/examples/: header.rs  time.rs
web/src/: main.rs  service.rs
web/src/db/: file.rs  mod.rs  store.rs  user.rs
web/src/model/: claims.rs
