[package]
name = "ruthenium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
sea-orm = { version = "0.8.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "debug-print", "sqlx-sqlite"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
