[package]
name = "ruthenium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.7"
clap = { version = "3.2.5", features = ["derive", "env"] }
dotenv = "0.15.0"
sea-orm = { version = "0.8.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "debug-print"] }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
