[package]
name = "ruthenium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
argon2 = "0.4.0"
axum = { version = "0.5.7", features = ["headers", "multipart"] }
clap = { version = "3.2.5", features = ["derive", "env"] }
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
rand_core = { version = "0.6.3", features = ["std"] }
sea-orm = { version = "0.8.0", features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-native-tls", "debug-print"] }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
time = "0.3.9"
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
uuid = { version = "1.1.2", features = ["v4"] }
