[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.6", features = ["headers", "multipart", "query"] }
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
dotenv = "0.15.0"
hyper = { version = "0.14.19", features = ["full"] }
jsonwebtoken = "8.1.0"
rust-crypto = "0.2.36"
sea-orm = { version = "0.8.0", features = ["sqlx-mysql", "runtime-tokio-native-tls", "debug-print"] }
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = "0.7.3"
tower = { version = "0.4.12", features = ["full"] }
tower-http = { version = "0.3.3", features = ["fs", "cors"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dev-dependencies]
hyper = "0.14.19"
clap = "3.1.18"
